unpackaged/main/default/objects/tspa__SettingsBackup__c/tspa__SettingsBackup__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant-Setting Backup</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Backup No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Settings Backup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>