unpackaged/main/default/objects/tspa__SettingsBackup__c/fields/tspa__Configuration_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Configuration_Id__c</fullName>
    <label>Configuration Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>