unpackaged/main/default/objects/tspa__SettingsBackup__c/fields/tspa__ImportSettingOrganizationID__c.field-meta.xml
<CustomField>
    <fullName>tspa__ImportSettingOrganizationID__c</fullName>
    <label>Import Setting Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>