unpackaged/main/default/objects/tspa__SettingsBackup__c/fields/tspa__Last_Action__c.field-meta.xml
<CustomField>
    <fullName>tspa__Last_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Action</label>
    <type>Checkbox</type>
</CustomField>