unpackaged/main/default/objects/tspa__SettingsBackup__c/fields/tspa__Package_Version__c.field-meta.xml
<CustomField>
    <fullName>tspa__Package_Version__c</fullName>
    <label>Package Version</label>
    <length>25</length>
    <type>Text</type>
</CustomField>