unpackaged/main/default/objects/tspa__SettingsBackup__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>